<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SagasApp</string>
    <string name="activity_menu">Menú</string>
    <string name="registrar_entrada">Registrar entrada</string>
    <string name="title_iniciar_descarga">Iniciar descarga</string>
    <string name="title_finalizar_descarga">Finalizar descarga</string>
    <string name="title_registro_papeleta">Registro de papeleta</string>
    <string name="title_medidor_almacen">Medidor almacén</string>
    <string name="title_medidor_tractor">Medidor tractor</string>
    <string name="title_foto_magnatel_almacen">Foto Magnetel - Almacén Principal</string>
    <string name="title_foto_magnatel_tractor">Foto Magnetel - Tractor</string>
    <string name="title_foto_rotogate_tractor">Foto Rotogate - Tractor</string>
    <string name="title_foto_rotogate_almacen">Foto Rotogate - Almacén Principal</string>
    <string name="title_foto_papeleta">Foto Papeleta</string>
    <string name="title_proceso_descarga">Proceso descarga</string>
    <string name="title_orden_compra">Orden de Compra</string>
    <string name="activity_capturar_procentaje">Capturar Porcentaje</string>
    <string name="mensaje_primera_foto">Tome la primera foto del medidor</string>
    <string name="mensaje_segunda_foto">Tome la segunda foto del medidor</string>
    <string name="mensaje_foto_papeleta">Tome foto a la papeleta</string>
    <string name="porcentaje_medidor">¿Porcentaje del medidor?</string>
    <string name="porcentaje_medidor_tractor_message">Registra el porcentaje del medidor del tractor</string>
    <string name="porcentaje_medidor_almacen_message">Registra el porcentaje del medidor del almacen</string>
    <string name="message_imagen_nitida">¿La imagen esta nítida?</string>
    <string name="message_nitida_si">Si, esta nítida/bien tomada</string>
    <string name="message_nitida_no">No, esta borrosa/mal tomada</string>
    <string name="cargando_imagenes_inicio" tools:ignore="Typos">Espere un momento…</string>
    <string name="cargando_imagenes_fin">Proceso finalizado</string>
    <string name="login_hint_username" translatable="false">Correo electrónico</string>
    <string name="login_hint_password" translatable="false">Contraseña</string>
    <string name="login_button">Login</string>
    <string name="spinner_gaseras">Gasera</string>
    <string name="spinner_num_compra">No. de orden de compra</string>
    <string name="spinner_num_compra_porteador">No. de orden de compra porteador</string>
    <string name="spinner_num_compra_expedidor">No. de orden de compra expedidor</string>
    <string name="num_embarque">No. de embarque</string>
    <string name="nombre_expedidor">Nombre expedidor</string>
    <string name="nombre_porteador">Nombre porteador</string>
    <string name="nombre_operador">Nombre operador</string>
    <string name="name_proveedor">Proveedor</string>
    <string name="placas_tractor">Placas tractor</string>
    <string name="producto">Producto</string>
    <string name="num_tanque">No. de tanque</string>
    <string name="capacidad_tanque">Capacidad tanque (lt.)</string>
    <string name="porcentaje_tanque">Porcentaje del Tanque</string>
    <string name="masa">Masa (kg.)</string>
    <string name="presion_tanque">Presión tanque</string>
    <string name="sello">Sello</string>
    <string name="valor_carga">Valor de la carga</string>
    <string name="nombre_responsable">Nombre del responsable</string>
    <string name="tanque_prestado">¿Tanque prestado?</string>
    <string name="label_si">Si</string>
    <string name="label_no">No</string>
    <string name="tipo_medidor_tractor">Tipo de medidor del tractor</string>
    <string name="tipo_medidor_almacen">Tipo de medidor del almacén</string>
    <string name="nombre_almacen">Numero de almacén</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_embarque">Fecha de embarque</string>
    <string name="seleccionar_fecha">Seleccione fecha…</string>
    <string name="abr_cantidad" tools:ignore="Typos">Cant.</string>
    <string name="cantidad_venta">Cantidad</string>
    <string name="abr_unidad_medida">UM</string>
    <string name="precio">Precio</string>
    <string name="importe">Importe</string>
    <string name="subtotal">Subtotal</string>
    <string name="iva">IVA</string>
    <string name="ips">IPS</string>
    <string name="total">Total</string>
    <string name="abr_porcentaje_desc">% Desc.</string>
    <string name="empty_field">Hay campos vacíos</string>
    <string name="registrar">Registrar</string>
    <string name="limpiar_campos">Limpiar campos</string>
    <string name="message_cancel">Cancelar</string>
    <string name="message_acept">Aceptar</string>
    <string name="invalid_email">El correo electrónico no es valido</string>
    <string name="usuario_incorrecto">El usuario y la contraseña no coinciden</string>
    <string name="login_sucess">Usuario correcto</string>
    <string name="usuario_sin_permisos">No tienes permisos para usar la aplicacion</string>
    <string name="message_continuar">Una vez iniciado el proceso no es posible regresar, ¿esta seguro de continuar?</string>
    <string name="message_cargando">Cargando…</string>
    <string name="message_datos_obtenidos">Los datos se obtuvieron correctamente…</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="punto">.</string>
    <string name="porcentaje">%</string>
    <string-array name="gaseras_array">
        <item>Gas 1</item>
        <item>Gas 2</item>
    </string-array>
    <string-array name="tipos_medidor">
        <item>Magnetel</item>
        <item>Rotogate</item>
    </string-array>
    <string name="message_goback_diabled">En caso de que hayas llenado datos estos se perderán, ¿Realmente deseas continuar?</string>
    <string name="title_alert_message">Advertencia</string>
    <string name="titulo_exito_registro_papeleta">Operación Exitosa</string>
    <string name="mensaje_exito_papeleta_registro_en_servicio">Los datos se han guardado exitosamente</string>
    <string name="titulo_exito_registro_papeleta_android">Datos guardados en Android</string>
    <string name="mensaje_exito_papeleta_android">No he logrado conectar con el servidor por falta de conexión a internet. Los datos se enviarán al detectar una conexión de internet.</string>
    <string name="titulo_error_papeleta">Se ha generado un error, intente nuevamente</string>
    <string name="toma_de_lectura_inicial">Toma de lectura inicial</string>
    <string name="seleciona_la_estaci_n_de_carburaci_n">Selecciona la Estación de Carburación:</string>
    <string name="selecciona_el_tipo_de_medidor_porcentual">Selecciona el tipo de medidor porcentual:</string>
    <string name="toma_de_lectura_final">Toma de lectura final</string>
    <string name="error_titulo">Error</string>
    <string name="toma_de_lectura">Toma de lectura</string>
    <string name="p500">P5000 -</string>
    <string name="c_al_es_la_lectura_del_p500">¿Cuál es la lectura del P5000?</string>
    <string name="registra_la_lectura_del_p500_de_la_estaci_n">Registra la lectura del P5000 de la estación</string>
    <string name="mensjae_error_campos">Existen errores en algunos campos:</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="tomar_foto_estacion">Tomar foto de P5000 </string>
    <string name="tomar_foto_pipa">Tomar foto de P5000 </string>
    <string name="registra_porcentaje_estacion">Registra el porcentaje del </string>
    <string name="selecciona_la_pipa">Selecciona la pipa</string>
    <string name="Pipa">Pipa</string>
    <string name="registra_la_lectura_del_p500_de_la_pipa">Registra la lectura del P5000 de la pipa</string>
    <string name="selecciona_almacen_principal">Selecciona el Almacén principal</string>
    <string name="Almacen">Almacén</string>
    <string name="Camioneta">Camioneta</string>
    <string name="Recordatorio_uno">Recuerda que en la siguiente pantalla debes contabilizar <u>todos</u> los cilindros sin importar que <b>estén llenos o vacíos</b>.<u>El total.</u></string>
    <string name="Recordatorio_dos">Recuerda que las siguiente pantalla debes contabilizar <u>todos</u> los cilindros <b>llenos.</b></string>
    <string name="Selecciona_la_camioneta">Selecciona la camioneta:</string>
    <string name="Quien_eres">¿Quién toma la lectura? es decir, ¿quién eres?</string>
    <string name="configuracion_camioneta"><u>Configuracion-camioneta</u></string>
    <string name="cilindros">Cilindros</string>
    <string name="cantidad_cilindros">Cantidad</string>
    <string name="Registra_configuracion">Registra la configuración de salida de la camioneta</string>
    <string name="Contabiliza">Contabiliza los llenos</string>
    <string name="Reporte">Reporte</string>
    <string name="reporte_del_dia">Reporte del día</string>
    <string name="selecciona_la_fecha_a_reportar">Selecciona la fecha a reportar:</string>
    <string name="selecciona_la_unidad">Selecciona la unidad:</string>
    <string name="generando_reporte">Generando reporte....</string>
    <string name="Generar_reporte">Generar Reporte</string>
    <string name="terminar">Terminar</string>
    <string name="imprimir_reporte">Imprimir Reporte</string>
    <string name="Recarga_camioneta">Recarga camioneta</string>
    <string name="Recarga_de_gas">Recarga de gas</string>
    <string name="recarga">Recarga</string>
    <string name="registra_configuracion_recarga">Registra la configuración de recarga de la camioneta</string>
    <string name="Recarga_de_estacion">Recarga estación</string>
    <string name="datos_inciales">Datos iniciales</string>
    <string name="selecciona_la_pipa_de_salida">Selecciona la pipa de salida:</string>
    <string name="selecciona_medidor_porcentual_salida">Selecciona el tipo de medidor porcentual:</string>
    <string name="selecciona_estacion_destino">Selecciona la Estación de Carburación:</string>
    <string name="selecciona_medidor_porcentual_estacion">Selecciona el tipo de medidor porcentual:</string>
    <string name="Estacion">Registro de Clientes</string>
    <string name="Recarga_pipa">Recarga pipa </string>
    <string name="selecciona_la_pipa_a_recargar">Selecciona la pipa a recargar</string>
    <string name="Autoconsumo_estacion">Autoconsumo Estación de Carb.</string>
    <string name="carburaci_n_de_gas">Carburación de Gas</string>
    <string name="selecciona_la_estaci_n_de_salida">Selecciona la estación de salida:</string>
    <string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>
    <string name="Autoconsumo_inventario">Autoconsumo Inventario Gral.</string>
    <string name="autoconsumo_inventario_gral">Autoconsumo Inventario Gral</string>
    <string name="la_salida_es_desde_el_inventario_general">La salida es desde el inventario general</string>
    <string name="Autoconsumo">Autoconsumo</string>
    <string name="Traspaso">Traspaso</string>
    <string name="trasferencia_de_gas">Trasferencia de gas</string>
    <string name="selecciona_la_estacion_de_carburacion_de_salida">Selecciona la Estación de Carburación de salida:</string>
    <string name="selecciona_la_pipa_de_entrada">Selecciona la pipa de entrada:</string>
    <string name="Calibracion">Calibración</string>
    <string name="seleccione_la_estacion_de_carburacion_a_calibrar">Seleccione la estación de carburación a calibrar</string>
    <string name="selecciona_la_pipa_de_salida_calibracion">Selecciona la Pipa de salida:</string>
    <string name="selecciona_destino_de_las_pruebas">Selecciona destino de las pruebas:</string>
    <string name="calibracion_pipa"><u>Calibración-Pipa</u></string>
    <string name="factura">FACTURA</string>
    <string name="pagar">Pagar</string>
    <string name="iva_16">I.V.A. (16%):</string>
    <string name="credito">Crédito:</string>
    <string name="precio_lt">Precio (lt):</string>
    <string name="desc_lt">Desc (lt)</string>
</resources>