<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/title_medidor_almacen"
        android:textColor="@color/colorTextLogin"
        android:textSize="20dp"
        android:textStyle="italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/porcentaje_medidor"
        android:textColor="@color/colorTextLogin"
        android:textSize="45dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/porcentaje_medidor_almacen_message"
        android:textColor="@color/colorTextLogin"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/number_picker_porcentaje"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:theme="@style/NumberPickerText"
            android:scaleY="2"
            android:layout_weight="2"
            android:layout_gravity="center" >

        </NumberPicker>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="30dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/punto"/>
        <NumberPicker
            android:id="@+id/number_picker_decimal"
            android:layout_width="60dp"
            android:layout_height="180dp"
            android:theme="@style/NumberPickerText"
            android:scaleY="2"
            android:layout_weight="2"
            android:layout_gravity="center" >

        </NumberPicker>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/porcentaje"/>

    </LinearLayout>

    <Button
        android:id="@+id/aceptar_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/colorButtonLogin"
        android:text="@string/message_acept"
        android:textColor="@color/colorTextButtonLogin"
        android:textSize="25dp" />


</LinearLayout>