<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/TVCamposCamionetasHeaderTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/toma_de_lectura"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TVCamposCamionetaHader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/configuracion_camioneta"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TVCamposCamionetasHeaderInstrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/Registra_configuracion"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TVCamposCamionetasHeaderContabiliza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/Contabiliza"
        android:textAlignment="center" />
</LinearLayout>
