<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_title">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/title_foto_magnatel_almacen"
            android:textColor="@color/colorTextLogin"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/image_view_foto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_maxScale="8"
        app:zoomage_minScale="0.6"
        app:zoomage_restrictBounds="false"
        app:zoomage_zoomable="true" />

    <LinearLayout
        android:id="@+id/layout_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SagasTheme.Button"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/tomar_foto"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_photo_nitida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/message_imagen_nitida"
            android:textColor="@color/colorTextLogin"
            android:textSize="18sp"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_foto_correcta"
                style="@style/SagasTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/message_nitida_si"
                android:textAlignment="center"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:id="@+id/button_foto_incorrecta"
                style="@style/SagasTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/message_nitida_no"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textIndicaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/mensaje_foto_papeleta"
        android:textColor="@color/colorTextLogin"
        android:textSize="18sp" />

</LinearLayout>